WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164473
Typo fix after
r162782
https://bugs.webkit.org/show_bug.cgi?id=164473
Summary
Typo fix after r162782
Csaba Osztrogonác
Reported
2016-11-07 04:08:21 PST
/Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebCore/platform/ThreadGlobalData.cpp:41:10: fatal error: 'TextCodeCMac.h' file not found #include "TextCodeCMac.h" ^ 1 error generated. --- It isn't TextCode_C_Mac.h, but TextCode_c_Mac.h, but wasn't problem with case insensitive file system. This ~3 years old bug is revealed by the Apple Mac cmake buildbot. :)
Attachments
Patch for landing
(1.09 KB, patch)
2016-11-07 04:09 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-11-07 04:09:48 PST
Created
attachment 294049
[details]
Patch for landing
Csaba Osztrogonác
Comment 2
2016-11-09 08:52:27 PST
Comment on
attachment 294049
[details]
Patch for landing Clearing flags on attachment: 294049 Committed
r208428
: <
http://trac.webkit.org/changeset/208428
>
Csaba Osztrogonác
Comment 3
2016-11-09 08:52:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug