Typo fix after r162782 https://bugs.webkit.org/show_bug.cgi?id=164473

Unreviewed trivial fix.

* platform/ThreadGlobalData.cpp:

Canonical link: https://commits.webkit.org/182161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208428 268f45cc-cd09-0410-ab3c-d52691b4dbfc